tests/ui/target-feature/tied-features.stderr
error: the target features paca, pacg must all be either enabled or disabled together
  --> $DIR/tied-features.rs:12:5
   |
LL |     #[target_feature(enable = "pacg")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add the missing features in a `target_feature` attribute

error: the target features paca, pacg must all be either enabled or disabled together
  --> $DIR/tied-features.rs:24:1
   |
LL | #[target_feature(enable = "paca")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add the missing features in a `target_feature` attribute

error: the target features paca, pacg must all be either enabled or disabled together
  --> $DIR/tied-features.rs:37:1
   |
LL | #[target_feature(enable = "paca")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add the missing features in a `target_feature` attribute

error: aborting due to 3 previous errors

